don't use cache

--- a/actions/hybrid_prod_deploy/action.yml
+++ b/actions/hybrid_prod_deploy/action.yml
@@ -48,8 +48,8 @@ runs:
         tags: "${{ fromJson(inputs.location).registry }}:${{ github.sha }}"
         labels: |
           branch=${{ github.head_ref }}
-        cache-from: type=gha
-        cache-to: type=gha,mode=max
+        # cache-from: type=gha
+        # cache-to: type=gha,mode=max
 
     - name: Deploy to Dagster Cloud
       uses: ./action-repo/actions/utils/deploy
